fix: improve readability of text

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,6 +26,9 @@ body {
                  sans-serif,
                  Apple Color Emoji,
                  Segoe UI Emoji;
+    p { line-height: 1.5rem; }
+    article a p,
+    article p { line-height: 1rem; }
     @media (prefers-color-scheme: dark) {
         background: #333333;
         color: white;
